--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Documentation with ENDPOINTS</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -67,7 +67,6 @@
     <h2>Delete Product by ID</h2>
     <p>Delete an existing product by its ID.</p>
     <code>DELETE /product/:id</code>
-
 
 </body>
 </html>
